lesson8/css/small.css
/*-----------------------------------------
General
-----------------------------------------*/
body {
    font-size: 16px;
    font-family: 'Inter', sans-serif;
    max-width: 100%;
    margin: 0 auto;
    color: #000000;
}

h1,
h2,
h3,
h4,
nav a {
    font-family: 'Ramabhadra', sans-serif;
}

main h2,
main h3,
main h4 {
    text-align: center;
    margin-top: 0;
}

/*-----------------------------------------
Header & Footer
-----------------------------------------*/
header,
footer {
    background-color: #283845;
    color: #ffffff;
}

/*header*/
header {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 10px 0;
}

.headings {
    display: flex;
    flex-direction: column;
}

header img {
    width: 60px;
    height: auto;
}

.headings h1 {
    margin: 0 0 0 20px;
}

.phrase {
    font-style: italic;
    letter-spacing: 1pt;
    margin-left: 20px;
    font-size: .9rem;
}

/*footer*/

footer a {
    color: rgb(76, 189, 0);
}

footer {
    padding: 15px;
    text-align: center;
}

footer p {
    margin: 0;
}

/*-----------------------------------------
Navegation Menu
-----------------------------------------*/

nav {
    background-color: #306630;
    border-radius: 0 0 2px 2px;
    margin: 0 auto;
    margin-bottom: 20px;
}

.navigation {
    list-style: none;
    padding: 0;
}

ul.navigation {
    margin: 0;
    padding: 0;
}

.navigation li:first-child {
    display: block;
}

.navigation li {
    display: none;
}

.navigation a {
    display: block;
    text-decoration: none;
    color: #ffffff;
    padding: 0.60rem;
    font-size: .95rem;
    text-align: left;
}

.navigation a:hover {
    background-color: #bbb;
    color: #000000;
    border-radius: 2px 2px 2px 2px;
}

a.active {
    color: rgb(255, 192, 19);
    text-decoration: underline;
}

.responsive li {
    display: block;
}

/*-----------------------------------------
Main
-----------------------------------------*/

main {
    margin: 0 auto;
    max-width: 100%;
}

/*-----------------------------------------
Banner Message 
-----------------------------------------*/
#banner {
    text-align: center;
    background-color: rgb(235, 200, 100);
    padding: 10px;
}

/* ----------------------------------------
Gallery
---------------------------------------- */
div.gallery-img {
    display: grid;
    grid-template-columns: 1fr;
    justify-items: center;
}

figure img[data-src] {
    filter: blur(0.3rem);
}

figure img {
    filter: blur(0rem);
    transition: filter 0.5s;
    border-radius: 15px;
    width: 100%;
    height: 250px;
    object-fit: cover;
}

figcaption {
    text-align: center;
}

/* -------------------------------------------
Form
------------------------------------------- */

form fieldset {
    margin: 2rem 0;
    border: 1px solid #283845;
    border-radius: 8px;
    max-width: 380px;
    margin-left: auto;
    margin-right: auto;
}

form legend {
    margin: 0 auto;
    color: #283845;
}

form label.sbs {
    display: block;
    padding: .5rem 0;
    color: #555;
    font-size: .8rem;
}

form label.top,
form div {
    display: block;
    padding-top: 2rem;
    font-size: .8rem;

}

form label.top input,
form label.top select {
    display: block;
    font-size: 1rem;
    width: 100%;
    max-width: 22rem;
    background-color: rgb(0, 0, 0, 0.1);
    border: solid 1px #888;
    border-radius: 4px;
    padding: .75rem;
    color: #444;
}

form label.top input:required {
    border: rgb(180, 9, 9) solid 2px;
}

form label.top input:required:valid {
    border: rgb(0, 155, 39) solid 2px;
}

.textRequired {
    color: rgb(180, 9, 9);
}

form input.submitButton {
    display: block;
    border: none;
    background-color: #306630;
    color: white;
    border-radius: 1rem;
    padding: 1rem 2rem;
    margin: 0 0 2rem 2%;
    width: 100%;
    max-width: 24rem;
    margin: 0 auto;
    margin-bottom: 60px;
    transition: .5s;
}

form input.submitButton:hover {
    background-color: #283845;
}

